--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tanstack/react-query": "^5",
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@tanstack/react-query": "^5.85.6",
     "@upstash/redis": "^1.34.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,8 +30,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.27.2",
-    "wagmi": "^2.16.0"
+    "viem": "^2.36.0",
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@types/node": "^22.18.0",
